--- a/t.tex
+++ b/t.tex
@@ -38,24 +38,25 @@
 
  
 \begin{document}
-% \input{title.tex}
-% \tableofcontents
-% 
-% \chapter{Introduction}
-% \input{intro.tex}
-% 
-% \chapter{Theory} % “There is Nothing More Practical Than A Good Theory” -- probably K. Lewin
-% \input{theory.tex}
-% 
-% \chapter{Numerical methods} 
-% % Computers are useless. They can only give you answers. -- P. Picasso (1968)
-% \input{numeric.tex}
+ %\input{title.tex}
+ %\tableofcontents
+ %
+ %\chapter{Introduction}
+ %\input{intro.tex}
+ %
+ %\chapter{Theory} % “
+ %{\hfill \textit{"There is Nothing More Practical Than A Good Theory"} --- probably K. Lewin}
+ %\input{theory.tex}
+ %
+ %\chapter{Numerical methods} 
+  %Computers are useless. They can only give you answers. -- P. Picasso (1968)
+ %\input{numeric.tex}
 %
-\chapter{Experimental methods}
-\input{expe.tex}
-
+ %\chapter{Experimental methods}
+ %\input{expe.tex}
+%
 \chapter{Results}
-% The purpose of computing is insight, not numbers. -- R. W. Hamming
+\hfill \textit{"The purpose of computing is insight, not numbers."} --- R. W. Hamming
 \input{result.tex}
 
 \chapter{Conclusion}
