added fishnets etc

--- a/fdphd.bib
+++ b/fdphd.bib
@@ -815,6 +815,28 @@ Terahertz spectroscopy of ferroelectrics and related materials
 %  -- Homogenisation: misc --
  	 	Jelinek2010 Fishnet homogenization
 
+@article{valentine2011development,
+  title={Development of bulk optical negative index fishnet metamaterials: Achieving a low-loss and broadband response through coupling},
+  author={Valentine, Jason and Zhang, Shuang and Zentgraf, Thomas and Zhang, Xiang},
+  journal={Proceedings of the IEEE},
+  volume={99},
+  number={10},
+  pages={1682--1690},
+  year={2011},
+  publisher={IEEE}
+}
+@article{navarro2011dual,
+  title={Dual-band double-negative-index fishnet metamaterial at millimeter-waves},
+  author={Navarro-C{\'\i}a, Miguel and Garc{\'\i}a-Meca, Carlos and Beruete, Miguel and Mart{\'\i}nez, Alejandro and Sorolla, Mario},
+  journal={Optics letters},
+  volume={36},
+  number={21},
+  pages={4245--4247},
+  year={2011},
+  publisher={Optical Society of America}
+}
+
+
 @article{hasar2009new,
   title={A new microwave method based on transmission scattering parameter measurements for simultaneous broadband and stable permittivity and permeability determination},
   author={Hasar, Ugur Cem},
@@ -1373,10 +1395,21 @@ Terahertz spectroscopy of ferroelectrics and related materials
   year={1994},
   publisher={Optical Society of America}
 }
+@article{navarro2011dual,
+  title={Dual-band double-negative-index fishnet metamaterial at millimeter-waves},
+  author={Navarro-C{\'\i}a, Miguel and Garc{\'\i}a-Meca, Carlos and Beruete, Miguel and Mart{\'\i}nez, Alejandro and Sorolla, Mario},
+  journal={Optics letters},
+  volume={36},
+  number={21},
+  pages={4245--4247},
+  year={2011},
+  publisher={Optical Society of America}
+}
+
+
 /*}}}*/
 % Aleian 2012 Plasmonic Au SiO2 nanoparticles
 % Cristian Kusko interesting simulated spectra
-% dp fi of 11 pazoutova p
 % Felbacq 2005 
 % Felbacq 2005 Theory of mesoscopic magnetism in PC
 
